[gd_scene load_steps=4 format=3 uid="uid://dk0rfimlbq35e"]

[ext_resource type="Script" path="res://bag/inventory_slots.gd" id="1_xkri1"]
[ext_resource type="Texture2D" uid="uid://dbcu2ta8erv2u" path="res://artes/icones/Food/Fish.png" id="2_v8ydo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l3ct7"]

[node name="inventory_slots" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 160.0
script = ExtResource("1_xkri1")

[node name="outerBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="innerBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -70.0
offset_right = 70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.611765, 0.603922, 0.584314, 1)

[node name="itemIcon" type="Sprite2D" parent="innerBorder"]
position = Vector2(70, 70)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_v8ydo")

[node name="itemQuantity" type="Label" parent="innerBorder"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_colors/font_shadow_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_colors/font_outline_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_font_sizes/font_size = 50
text = "1"

[node name="itemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_l3ct7")
action_mode = 0

[node name="usagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -145.0
offset_right = 230.0
offset_bottom = -5.0
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="useButton" type="Button" parent="usagePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 4.0
offset_right = 115.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Use"

[node name="dropButton" type="Button" parent="usagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -68.0
offset_right = 115.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Drop"

[connection signal="mouse_entered" from="itemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="itemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="itemButton" to="." method="_on_item_button_pressed"]
